<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.d3if3086.tabunganku.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_home_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="org.d3if3086.tabunganku.ui.menu.MenuFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_tabungFragment"
            app:destination="@id/tabungFragment" />
        <action
            android:id="@+id/action_navigation_dashboard_to_tarikFragment"
            app:destination="@id/tarikFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="org.d3if3051.mobpro1.ui.histori.HistoriFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_histori" />
    <fragment
        android:id="@+id/tabungFragment"
        android:name="org.d3if3086.tabunganku.ui.tabung.TabungFragment"
        android:label="fragment_tabung"
        tools:layout="@layout/fragment_tabung" >
        <action
            android:id="@+id/action_tabungFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/tarikFragment"
        android:name="org.d3if3086.tabunganku.ui.tarik.TarikFragment"
        android:label="fragment_tarik"
        tools:layout="@layout/fragment_tarik" >
        <action
            android:id="@+id/action_tarikFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.d3if3086.tabunganku.ui.about.AboutFragment"
        android:label="AboutFragment"
        tools:layout="@layout/fragment_about"/>
</navigation>